Removed CUDA compatibility

--- a/src/utils/generate_embeddings.ipynb
+++ b/src/utils/generate_embeddings.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import os\n",
     "from langchain.document_loaders import PyPDFLoader\n",
-    "from langchain.embeddings import SentenceTransformerEmbeddings\n",
+    "from lancgchain.embeddings import SentenceTransformerEmbeddings\n",
     "from langchain.vectorstores import Chroma\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "from tqdm import tqdm"
